fix tooltip for ToggleWrapButton

--- a/Extension/src/pages/options/styles/common.pcss
+++ b/Extension/src/pages/options/styles/common.pcss
@@ -201,20 +201,6 @@ label.checkbox-label {
 
 .tooltip {
     position: absolute;
-    right: 7px;
-    top: -41px;
-    white-space: nowrap;
-    visibility: hidden;
-    opacity: 0;
-    padding: 8px 16px;
-    background-color: var(--white);
-    font-size: 14px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
-    border-radius: 4px;
-
-    @media (prefers-color-scheme: dark) {
-        background-color: var(--gray700);
-    }
 }
 
 .actions {
@@ -351,10 +337,6 @@ select:focus {
     .actions__btn--active {
         background-color: var(--gray100);
     }
-
-    .tooltip {
-        background-color: var(--white);
-    }
 }
 
 .dark-mode {
@@ -400,9 +382,5 @@ select:focus {
 
     .actions__btn--active {
         background-color: var(--gray900);
-    }
-
-    .tooltip {
-        background-color: var(--gray700);
     }
 }
